--- a/packages/react-devtools/app.html
+++ b/packages/react-devtools/app.html
@@ -93,7 +93,7 @@
 
             var devtools;
             try {
-                devtools = require('react-devtools-core/standalone');
+                devtools = require('@textio/react-devtools-core/standalone');
             } catch (err) {
                 alert(
                     err.toString() +
